[tool.poetry]
name = "song-vibe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.1"
sentence-transformers = ">=3.0.0"
streamlit = ">=1.40.0"
numpy = ">=1.21.4"
faiss-cpu = "^1.8.0"
watchdog = "^4.0.0"
jupyter = "^1.1.0"
ipykernel = "^6.29.3"
torch = ">=2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
